GTNPORTAL-3181: update the responsive skin to handle the page selector better and prevent it from overflowing from its modal.

--- a/mobile-integration/skin/src/main/webapp/skin/ResponsiveSkin/portal/webui/component/UIMaskWorkspace/UIMaskWorkspace.css
+++ b/mobile-integration/skin/src/main/webapp/skin/ResponsiveSkin/portal/webui/component/UIMaskWorkspace/UIMaskWorkspace.css
@@ -50,10 +50,6 @@
         display: none;
     }
 
-    .MaskLayer {
-        background: inherit;
-    }
-
     .UIMaskWorkspace {
         position: relative !important;
     }
@@ -66,10 +62,6 @@
 @media screen and (max-height: 35em) {
     #UIWorkingWorkspace.background {
        display: none;
-    } 
-
-    .MaskLayer {
-       background: inherit;
     }
 
     .UIMaskWorkspace {
